--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
               style="border: none"
               height="315"
               referrerpolicy="strict-origin-when-cross-origin"
-              src="https://www.youtube.com/embed/w-7xcpsuvpk?si=0pOSUBwnJTK1GsF_&amp;controls=0"
+              src=""
               title="YouTube video player"
               width="560"
             >
@@ -1265,7 +1265,7 @@
               >
                 <i class="bi bi-instagram"> </i>
               </a>
-              <a href="#" target="_blank">
+              <a href="https://www.linkedin.com/company/voxel-networks" target="_blank">
                 <i class="bi bi-linkedin"> </i>
               </a>
               <!-- Replace # with actual LinkedIn link -->
@@ -1307,13 +1307,13 @@
           >
             <h4>Legal</h4>
             <p>
-              <a href="#"> Terms &amp; Conditions </a>
+              <a href="terms.html"> Terms &amp; Conditions </a>
             </p>
             <p>
-              <a href="#"> Privacy Policy </a>
+              <a href="privacy.html"> Privacy Policy </a>
             </p>
             <p>
-              <a href="#"> Cookie Policy </a>
+              <a href="cookies.html"> Cookie Policy </a>
             </p>
           </div>
           <div class="container copyright text-center mt-4">
