Add responsive YouTube embed styling and portfolio layout fix

--- a/index.html
+++ b/index.html
@@ -1467,6 +1467,32 @@
           </div>
         </div>
       </section>
+      <style>
+        /* YouTube Embed Holder Styling */
+        .yt-embed-holder {
+          width: 100%;
+          overflow: hidden;
+          aspect-ratio: 16/9;
+          margin-bottom: 0;
+        }
+
+        .yt-embed-holder iframe {
+          width: 300%;
+          height: 100%;
+          margin-left: -100%;
+          pointer-events: none;
+          display: block;
+          border-radius: 0;
+        }
+
+        /* Portfolio Entry Image Padding Fix */
+        .portfolio-entry .entry-image {
+          margin-bottom: 0 !important;
+          padding-bottom: 0 !important;
+        }
+
+        /* yt padding fix */
+      </style>
 
       <!-- Portfolio Section 2-->
       <!-- Portfolio Section -->
