feat: added Voxel logo, revamped Services section, removed outdated portfolio blocks
- Added logo beside sitename
- Removed "100+ successful campaigns" copy
- Updated services: added 3D Animation, UGC, iOS Apps

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           href="index.html"
         >
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.webp" alt=""> -->
+          <img src="assets/img/logo.webp" alt="" />
           <h1 class="sitename">Voxel</h1>
         </a>
         <nav class="navmenu" id="navmenu">
@@ -128,23 +128,10 @@
               <div class="visual-content">
                 <div class="fluid-shape">
                   <img
-                    alt="Abstract Fluid Shape"
+                    alt="Voxel logo"
                     class="fluid-img"
-                    src="assets/img/abstract/abstract-1.webp"
+                    src="assets/img/abstract/voxel_logo.webp"
                   />
-                </div>
-                <div class="stats-card">
-                  <div class="stats-number">
-                    <h2>100+</h2>
-                  </div>
-                  <div class="stats-label">
-                    <p>Successful Campaigns</p>
-                  </div>
-                  <div class="stats-arrow">
-                    <a href="#portfolio">
-                      <i class="bi bi-arrow-up-right"> </i>
-                    </a>
-                  </div>
                 </div>
               </div>
             </div>
@@ -152,7 +139,6 @@
         </div>
       </section>
       <!-- /Hero Section -->
-
       <!-- Services Section -->
       <section class="services section" id="services">
         <!-- Section Title -->
@@ -170,20 +156,13 @@
               <div class="col-lg-8 col-md-12">
                 <div class="service-intro">
                   <h2 class="service-heading">
-                    <h2 class="service-heading">
-                      Everything you need. <span>Voxel delivers.</span>
-                    </h2>
+                    Everything you need. <span>Voxel delivers.</span>
                   </h2>
                 </div>
               </div>
               <div class="col-lg-4 col-md-12">
                 <div class="service-summary">
                   <p>Strategy. Creativity. Tech. — Voxel.</p>
-
-                  <!-- <a href="service-details.html" class="service-btn">
-                  View All Services
-                  <i class="bi bi-arrow-right"></i>
-                </a> -->
                 </div>
               </div>
             </div>
@@ -196,15 +175,16 @@
             >
               <div class="service-card position-relative z-1">
                 <div class="service-icon">
-                  <i class="bi bi-globe2"> </i>
+                  <i class="bi bi-camera-reels"> </i>
                 </div>
                 <h3 class="hoverable">
-                  Web
-                  <span> Development </span>
+                  Video
+                  <span> Editing </span>
                 </h3>
                 <p>
-                  We build stunning, responsive, and performance-first websites
-                  that convert visitors into loyal customers.
+                  High-impact edits. Color-perfect frames. Seamless cuts. We
+                  don’t shoot — we sculpt footage into stories that stop the
+                  scroll and spark results.
                 </p>
               </div>
             </div>
@@ -215,15 +195,16 @@
             >
               <div class="service-card position-relative z-1">
                 <div class="service-icon">
-                  <i class="bi bi-camera-reels"> </i>
+                  <i class="bi bi-boxes"> </i>
                 </div>
                 <h3 class="hoverable">
-                  Video
-                  <span> Editing </span>
+                  3D
+                  <span> Animation </span>
                 </h3>
                 <p>
-                  From reels to promos, we cut, sync, color, and craft cinematic
-                  stories that captivate and convert.
+                  Whether it’s product visualization, motion design, or full
+                  cinematic sequences — our 3D work is built to impress and
+                  engineered to perform.
                 </p>
               </div>
             </div>
@@ -234,15 +215,16 @@
             >
               <div class="service-card position-relative z-1">
                 <div class="service-icon">
-                  <i class="bi bi-phone"> </i>
+                  <i class="bi bi-people"> </i>
                 </div>
                 <h3 class="hoverable">
-                  Mobile
-                  <span> Applications </span>
+                  UGC
+                  <span> Content </span>
                 </h3>
                 <p>
-                  From Android to iOS — we craft sleek, high-performance apps
-                  that feel native and scale beautifully.
+                  We turn real moments into real conversions. UGC that’s raw,
+                  relevant, and ridiculously on-brand — powered by creators, not
+                  copywriters.
                 </p>
               </div>
             </div>
@@ -253,15 +235,16 @@
             >
               <div class="service-card position-relative z-1">
                 <div class="service-icon">
-                  <i class="bi bi-easel3"> </i>
+                  <i class="bi bi-globe2"> </i>
                 </div>
                 <h3 class="hoverable">
-                  UI/UX
-                  <span> Design </span>
+                  Web
+                  <span> Development </span>
                 </h3>
                 <p>
-                  Slick, human-first design systems built for clarity, speed,
-                  and beauty — because users deserve better.
+                  Pixel-perfect, lightning-fast, and built for scale — our
+                  websites aren’t just interfaces, they’re engineered
+                  touchpoints crafted for brand impact and business outcomes.
                 </p>
               </div>
             </div>
@@ -272,15 +255,16 @@
             >
               <div class="service-card position-relative z-1">
                 <div class="service-icon">
-                  <i class="bi bi-rocket-takeoff"> </i>
+                  <i class="bi bi-phone"> </i>
                 </div>
                 <h3 class="hoverable">
-                  Digital
-                  <span> Marketing </span>
+                  Android
+                  <span> Apps </span>
                 </h3>
                 <p>
-                  Strategies that don’t just advertise — they convert.
-                  Performance-driven marketing to push your growth curve up.
+                  Built to perform across devices and networks. Our
+                  apps combine native power with clean design, delivering
+                  intuitive experiences and enterprise-grade scalability.
                 </p>
               </div>
             </div>
@@ -291,15 +275,16 @@
             >
               <div class="service-card position-relative z-1">
                 <div class="service-icon">
-                  <i class="bi bi-pencil-square"> </i>
+                  <i class="bi bi-phone"> </i>
                 </div>
                 <h3 class="hoverable">
-                  Content Writing &amp;
-                  <span> SEO </span>
+                  iOS
+                  <span> Apps </span>
                 </h3>
                 <p>
-                  Words that rank. Copy that resonates. Optimized content to
-                  drive visibility and authority across the web.
+                  Designed exclusively for Apple’s ecosystem. We craft iOS apps
+                  that blend elegant aesthetics with precision-engineered
+                  performance — smooth, secure, and future-ready.
                 </p>
               </div>
             </div>
@@ -307,6 +292,7 @@
         </div>
       </section>
       <!-- /Services Section -->
+
       <section class="portfolio section" id="portfolio">
         <div class="container section-title" data-aos="fade-up">
           <h2>Portfolio</h2>
